Seo ve metatag ayarları

--- a/index.html
+++ b/index.html
@@ -1,13 +1,82 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>project</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<html lang="tr">
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="application-name" content="Luminya" />
+  <meta name="color-scheme" content="light" />
+
+  <!-- Primary Meta Tags -->
+  <title>Luminya Wellness & Spa Center | Türkiye'nin En İyi Spa ve Masaj Merkezi</title>
+  <meta name="title" content="Luminya Wellness & Spa Center | Türkiye'nin En İyi Spa ve Masaj Merkezi" />
+  <meta name="description"
+    content="Luminya Wellness Center olarak 13+ şubemizde İsveç masajı, Thai masajı, aromaterapi, Türk hamamı, cilt bakımı ve wellness paketleri sunuyoruz. Hemen randevu alın!" />
+  <meta name="keywords"
+    content="spa, wellness, masaj, hamam, türk hamamı, aromaterapi, isveç masajı, thai masajı, cilt bakımı, spa merkezi, masaj salonu, kese köpük, spa paketleri, relax, rahatlama, terapi, luminya" />
+  <meta name="author" content="Luminya Wellness Center" />
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+  <meta name="language" content="Turkish" />
+  <meta name="revisit-after" content="7 days" />
+  <meta name="theme-color" content="#8B7355" />
+
+  <!-- PWA -->
+  <link rel="manifest" href="/manifest.json" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://luminya.com/" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://luminya.com/" />
+  <meta property="og:site_name" content="Luminya Wellness Center" />
+  <meta property="og:title" content="Luminya Wellness & Spa Center | Türkiye'nin En İyi Spa ve Masaj Merkezi" />
+  <meta property="og:description"
+    content="Luminya Wellness Center olarak 13+ şubemizde İsveç masajı, Thai masajı, aromaterapi, Türk hamamı, cilt bakımı ve wellness paketleri sunuyoruz. Hemen randevu alın!" />
+  <!-- Not: og-image.jpg yoksa /vite.svg en azından fallback sağlar -->
+  <meta property="og:image" content="https://luminya.com/og-image.jpg" />
+  <meta property="og:image:alt" content="Luminya Wellness & Spa Center" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:locale" content="tr_TR" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://luminya.com/" />
+  <meta name="twitter:title" content="Luminya Wellness & Spa Center | Türkiye'nin En İyi Spa ve Masaj Merkezi" />
+  <meta name="twitter:description"
+    content="Luminya Wellness Center olarak 13+ şubemizde İsveç masajı, Thai masajı, aromaterapi, Türk hamamı, cilt bakımı ve wellness paketleri sunuyoruz. Hemen randevu alın!" />
+  <meta name="twitter:image" content="https://luminya.com/og-image.jpg" />
+  <meta name="twitter:site" content="@luminya" />
+  <meta name="twitter:creator" content="@luminya" />
+
+  <!-- Additional Meta Tags for Mobile -->
+  <meta name="format-detection" content="telephone=yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="Luminya" />
+
+  <!-- Geo Tags -->
+  <meta name="geo.region" content="TR" />
+  <meta name="geo.placename" content="Türkiye" />
+
+  <!-- Preconnect for Performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://images.unsplash.com" />
+  <link rel="preconnect" href="https://img.freepik.com" />
+
+  <!-- DNS Prefetch -->
+  <link rel="dns-prefetch" href="https://www.google-analytics.com" />
+
+  <!-- Schema.org JSON-LD will be injected by React components -->
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
