Performans iyileştirmeleri ve seo ayarlamaları

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="application-name" content="Luminya" />
   <meta name="color-scheme" content="light" />
+  
+  <!-- Performance hints -->
+  <meta http-equiv="x-dns-prefetch-control" content="on" />
+  
+  <!-- Resource hints for faster loading -->
+  <link rel="preload" as="style" href="/src/index.css" />
 
   <!-- Primary Meta Tags -->
   <title>Luminya Wellness & Spa Center | Türkiye'nin En İyi Spa ve Masaj Merkezi</title>
@@ -67,9 +73,17 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="preconnect" href="https://images.unsplash.com" />
   <link rel="preconnect" href="https://img.freepik.com" />
+  <link rel="preconnect" href="https://luminya-924de.firebaseapp.com" />
+  <link rel="preconnect" href="https://firestore.googleapis.com" />
+  <link rel="preconnect" href="https://www.googleapis.com" />
+  <link rel="preconnect" href="https://www.transparenttextures.com" />
+  <link rel="preconnect" href="https://lunadenspa.com.tr" />
+  <link rel="preconnect" href="https://res.cloudinary.com" />
 
   <!-- DNS Prefetch -->
   <link rel="dns-prefetch" href="https://www.google-analytics.com" />
+  <link rel="dns-prefetch" href="https://firestore.googleapis.com" />
+  <link rel="dns-prefetch" href="https://www.googleapis.com" />
 
   <!-- Schema.org JSON-LD will be injected by React components -->
 </head>
